yaml/letsencrypt-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: register-domain-com
  namespace: vpn-ciplogic-com
  labels:
    app: register-domain
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
  selector:
    app: register-domain
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: register-domain.com
  namespace: vpn-ciplogic-com
spec:
  rules:
  - host: vpn.ciplogic.com
    http:
      paths:
      - backend:
          serviceName: register-domain-com
          servicePort: http
        path: /.well-known/
